tools/gd/src/snapshots/gd__pager__tests__key_d_cross_file_boundary.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 16,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "Hunk 3/6 · b.rs",
    full_context: false,
    visual_anchor: 0,
}
