tools/gd/src/snapshots/gd__pager__tests__key_d_next_hunk_same_file.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 16,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Hunk 2/6 · a.rs",
    full_context: false,
    visual_anchor: 0,
}
