tools/gd/src/snapshots/gd__pager__tests__key_d_then_u_round_trip_full_context_single_file.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 6,
    top_line: 0,
    active_file: Some(
        0,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Change 1/2 · a.rs",
    full_context: true,
    visual_anchor: 0,
}
