tools/gd/src/snapshots/gd__pager__tests__key_d_tree_focused_active_file_jumps_globally.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 16,
    active_file: Some(
        0,
    ),
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Hunk 3/6 · b.rs",
    full_context: false,
    visual_anchor: 0,
}
